syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateSnapshotFromDiskRequest {
    reserved 3;
    reserved 5;
    reserved 6;

    types.Disk SrcDisk = 1;
    string SrcDiskCheckpointId = 2;
    string DstSnapshotId = 4;
    bool UseS3 = 7;
    bool UseProxyOverlayDisk = 8;
}

message CreateSnapshotFromDiskResponse {
    uint64 SnapshotSize = 1;
    uint64 SnapshotStorageSize = 2;
    uint64 TransferredDataSize = 3;
}

message CreateSnapshotFromDiskTaskState {
    reserved 2;
    reserved 6;

    uint32 MilestoneChunkIndex = 11;
    uint32 TransferredChunkCount = 9;
    double Progress = 7;
    uint64 SnapshotSize = 3;
    uint64 SnapshotStorageSize = 4;
    uint32 ChunkCount = 5;
    uint64 TransferredDataSize = 8;
    optional bool ProxyOverlayDiskCreated = 10;
    string BaseSnapshotId = 12;
    string BaseCheckpointId = 13;
}

message CreateSnapshotFromDiskMetadata {
    double Progress = 1;
}
